[metadata]
name = seatbelt
version = 0.1.0
author = The Yellow Duck Company
author_email = hello@yellowduckcompany.com
description = A Seatbelt package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yellowduckcompany/packages
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8